implemented transformer for translation

--- a/10_pytorch_model_deployment.ipynb
+++ b/10_pytorch_model_deployment.ipynb
@@ -3624,15 +3624,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ho ho! Those are some delicious sounding foods (although I've never heard of \"beignets\"... update: after a quick Google search, beignets also look delicious). \n",
-    "                                                \n",
-    "You can see a full list of the Food101 class names on the course GitHub under [`extras/food101_class_names.txt`](https://github.com/mrdbourke/pytorch-deep-learning/blob/main/extras/food101_class_names.txt)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### 10.3 Creating a subset of the Food101 dataset for faster experimenting \n",
     "\n",
     "This is optional.\n",
@@ -3910,7 +3901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3927,7 +3918,7 @@
     }
    ],
    "source": [
-    "from helper_functions import plot_loss_curves\n",
+    "from lib.helper_functions import plot_loss_curves\n",
     "\n",
     "# Check out the loss curves for FoodVision Big\n",
     "plot_loss_curves(effnetb2_food101_results)"
