--- a/andrej/gpt.ipynb
+++ b/andrej/gpt.ipynb
@@ -813,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "id": "077c39b3",
    "metadata": {},
    "outputs": [
@@ -891,6 +891,7 @@
     "# that come before it and not the ones that come after it.\n",
     "# So we want to set the upper triangle of the wei tensor to -inf so that when we apply softmax,\n",
     "# the softmax will ignore those positions and assign 0 weights to them.\n",
+    "# tril represents a lower triangular matrix, which is used to mask the upper triangle of the wei tensor.\n",
     "tril = torch.tril(torch.ones((T, T)))  # shape (T, T) = (8, 8)\n",
     "wei = wei.masked_fill(tril == 0, float('-inf'))  # set the upper triangle to -inf\n",
     "print(wei[0])\n",
