--- a/andrej/language_model_mlp_3.ipynb
+++ b/andrej/language_model_mlp_3.ipynb
@@ -158,8 +158,12 @@
     "b2 = torch.randn(vocab_size,                      generator=g) * 0\n",
     "\n",
     "# BatchNorm parameters\n",
+    "\n",
+    "# Each feature (i.e., neuron in a given layer or i.e. each dimension in the hidden vector)\n",
+    "# gets its own learnable γ (scale) and β (shift).\n",
     "bngain = torch.ones((1, n_hidden)) # one for each neuron in the hidden layer\n",
     "bnbias = torch.zeros((1, n_hidden)) # one for each neuron in the hidden layer\n",
+    "\n",
     "bnmean_running = torch.zeros((1, n_hidden))\n",
     "bnstd_running = torch.ones((1, n_hidden))\n",
     "\n",
@@ -710,6 +714,9 @@
     "class LayerNorm1d:\n",
     "  def __init__(self, dim, eps=1e-5):\n",
     "    self.eps = eps\n",
+    "\n",
+    "    # Each feature (i.e., neuron in a given layer or i.e. each dimension in the hidden vector)\n",
+    "    # gets its own learnable γ (scale) and β (shift).\n",
     "    self.gamma = torch.ones(dim)\n",
     "    self.beta = torch.zeros(dim)\n",
     "\n",
