implemented quantization and DistributedDataParallel

--- a/quantization/quantization_aware_training.ipynb
+++ b/quantization/quantization_aware_training.ipynb
@@ -105,7 +105,9 @@
     "What is the derivative of the quantization operation we defined before?\n",
     "A typical solution is to approximate the gradient with the STE (Straight-through Estimator) approximation.\n",
     "The STE approximation results in 1 if the value being quantized is in the range [𝛼, 𝛽], otherwise it is 0.\n",
-    "(INTEGER QUANTIZATION FOR DEEP LEARNING INFERENCE: PRINCIPLES AND EMPIRICAL EVALUATION, Wu et al.)\n"
+    "(INTEGER QUANTIZATION FOR DEEP LEARNING INFERENCE: PRINCIPLES AND EMPIRICAL EVALUATION, Wu et al.)\n",
+    "\n",
+    "`The goal of QAT is to make the model reach the global minimum (of the loss function wrt weight) that's more wide so that if the weight after the quantization changes or moves a little bit due to quantization effect, it will still be in the same region of the loss function thus the loss will not change or increase by much and the model will not suffer from a big accuracy drop. And this is why QAT works.`"
    ]
   },
   {
