--- a/quantization/quantization_compare_minmax_percentile.ipynb
+++ b/quantization/quantization_compare_minmax_percentile.ipynb
@@ -43,6 +43,7 @@
     "\n",
     "- Instead of using the min and max, choose a lower percentile (e.g., 0.1%) and upper percentile (e.g., 99.9%) of the data\n",
     "- Helps to ignore outliers while preserving meaningful value distribution\n",
+    "- So we set the range to the percentile of the distribution of V(original floating point numbers), to reduce sensitivity to outliers\n",
     "\n",
     "Instead of \n",
     "```math\n",
